Changed CSS for the HW2 to match with all requirements

--- a/gallery.html
+++ b/gallery.html
@@ -104,7 +104,7 @@
                 </div>
                 <h3 class="photo__name"><bdo dir="rtl">ПЕРЕВЕРНИ свой взгляд</bdo></h3>
                 <p class="photo__description">Искусственный интеллект (ИИ) обладает потенциалом для решения некоторых из самых серьезных проблем, существующих сегодня в образовании, внедрения инноваций в практику преподавания и обучения и ускорения прогресса в достижении ЦУР 4. </p>
-                <p class="photo__price">Попробуй уже сейчас</p>
+                <p class="photo__price" id="smthFree">Попробуй уже сейчас</p>
             </div>
 
             <div class="gallery__item ">
@@ -198,10 +198,12 @@
             
                 <h3 class="photo__name">Научная КОНФЕРЕНЦИЯ</h3>
                     <p class="photo__description"><u>Расписание</u></p>
-                    <p class="photo__description"><time>2023-05-12</time> официальное открытие конференции</p>
-                    <p class="photo__description"><time>2023-05-13</time> основная секция докладов</p>
-                    <p class="photo__description"><time>2023-05-14</time> официальное закрытие конференции и награждение участников</p>
-                <p class="photo__price">Участие бесплатно</p>
+                    <ul style="list-style-type:circle">
+                        <li class="photo__description"><time>2023-05-12</time> официальное открытие конференции</li>
+                        <li class="photo__description"><time>2023-05-13</time> основная секция докладов</li>
+                        <li class="photo__description"><time>2023-05-14</time> официальное закрытие конференции и награждение участников</li>
+                    </ul>
+                <p class="photo__price" id="smthFree">Участие бесплатно</p>
             </div>
 
             <div class="gallery__item ">
@@ -232,7 +234,7 @@
                 <h3 class="photo__name">ЗАГАДОЧНЫЕ истории</h3>
                     <article class="photo__description">
                         История о том, как начиная с прошлого года началось
-                         <mark>загадочное</mark> сокращение числа студентов после экзаменов по дифференциальным уравнениям. В этом году было замечено
+                         <mark style="background-color:orange !important;">загадочное</mark> сокращение числа студентов после экзаменов по дифференциальным уравнениям. В этом году было замечено
                          исчезновение 1 группы из 3 на втором курсе ПМ. Мы будет продолжать расследование.
                       </article>
                 <p class="photo__price">>39 ИУПов/2 года </p>
