--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
 
     <section class="for__box center">
-        <h2 class="extra for__title">НИУ ВШЭ - это ... </h2>
+        <h5 class="extra for__title">НИУ ВШЭ - это ... </h5>
         <div class="content_for">
             <div class="for1 for_item_big for__item">ЛЮДИ</div>
             <div class="for2 for_item_big for__item"><bdi>НАУКА</bdi></div>
@@ -92,7 +92,13 @@
                     <!--Изображение-->
                 </div>
                 <h3 class="photo__name">СКИДКА на обучение</h3>
-                <p class="photo__description">Предоставляется при попадании в топ рейтинга.*<br>Топ 15% - 70% скидка<br>Топ 25% - 50% скидка<br>Топ 50% - 25% скидка<br>* может не предоставляться по устмотрению университета</p>
+                <p  class="photo__description">Предоставляется при попадании в топ рейтинга.</p>
+                <ol type="I" class="photo__description">
+                    <li>Топ 15% - 70% скидка</li>
+                    <li>Топ 25% - 50% скидка</li>
+                    <li>Топ 50% - 25% скидка</li>
+                </ol>
+                <p  class="photo__description">* может не предоставляться по устмотрению университета</p>
                 <div class="prices__box">
                     <p class="photo__price">126 000 руб.</p>
                     <p class="photo__price_new">420 000 руб.</p>
@@ -176,7 +182,7 @@
                      </iframe>
                 </div>
 
-                <h3 class="photo__name">ГАЛЕРЕЯ воспоминаний</h3>
+                <h3 class="photo__name" style="color:blue;font-size:30px;">ГАЛЕРЕЯ воспоминаний</h3>
                 <p class="photo__description">На странице галереи вы можете посмотреть самые интересные воспоминания и события об учебы в НИУ ВШЭ.</p>
                 <p class="photo__price">Цена: бесценно</p>
             </div>
