--- a/form.html
+++ b/form.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=dvice-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>form</title>
     <!-- <base target="_blank">   -->
     <!-- чтобы увеличить количество тегов. Этот тег позволяет открывать все новые страницы в новоой вкладке -->
@@ -147,6 +147,9 @@
         </form>
         
     </section>
+
+
+
 
 
 
