--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=dvice-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Main page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+
     <link rel="stylesheet" href="style.css" />
+
 
 </head>
 
@@ -234,10 +238,18 @@
         <a href="gallery.html" class="link__bottom">Перейти в мою галерею с самыми яркими моментами обучения в НИУ ВШЭ</a>
 
 
+    </section>
 
 
+    <section class="map_box  center">
+        <h2 class="photo__gallery">Лучший коворкинг Москвы!</h2>
+
+        <div id ="map_div" class="map_div">
+
+        </div>
 
     </section>
+
 
 
     <footer class="center footer">
@@ -286,5 +298,8 @@
         
     </footer>
 </body>
+
+<script  src="./map_index.js"></script>
+
 
 </html>
