Implemented voice message option and key-words answers

--- a/gallery.html
+++ b/gallery.html
@@ -310,28 +310,8 @@
                 <div class="left"> 
                     <div class="bubble bubble_left">
                         Привет! <br>
-                        Задай свой вопрос!
+                        Поздоровайся со мной!
                     </div>
-                </div>
-
-                <div class="right"> 
-                    <div class="bubble bubble_right">
-                        Привет!
-                    </div>
-                </div>
-
-
-                <div class="container">
-                    <div class="display">
-                    </div>
-            
-                    <div class="controllers">
-                    </div>
-                </div>
-
-                <!-- Будут создаваться такие объекты -->
-                <div class="right"> 
-                    <audio id="recordedAudio" class="playback"></audio>
                 </div>
 
             </div>
