--- a/guestbook.html
+++ b/guestbook.html
@@ -647,7 +647,7 @@ body {
     </footer>
 
 
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
     <!-- <script src="guestbook.js"></script> -->
     <script src="represent_guest.js"></script>
 
